--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -1,23 +1,31 @@
-.Button {
-    padding: 2em;
+.HomeScreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: linear-gradient(135deg, #007bff, #00c6ff);
+    position: relative;
+    overflow: hidden;
 }
 
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
+.PlayButton {
+    border-radius: 30px;
+    border: 3px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
-    font-weight: 500;
+    font-weight: 900;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: red;
     cursor: pointer;
     transition: border-color 0.25s;
   }
-  button:hover {
-    border-color: #646cff;
+  .PlayButton:hover {
+    border-color: #ffa340;
+    color: orange;
   }
-  button:focus,
-  button:focus-visible {
+  .PlayButton:focus,
+  .PlayButton:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
   
@@ -29,7 +37,23 @@ button {
     a:hover {
       color: #747bff;
     }
-    button {
+    .PlayButton {
       background-color: #f9f9f9;
     }
   }
+
+.ground {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+  }
+
+.backgroundCapy {
+    position: absolute; /* Position the image absolutely relative to its container */
+    bottom: 0; /* Position it at the bottom */
+    left: 100px; /* Align it to the left */
+    width: 30%;
+    height: 30%;
+    object-fit: contain;
+}
