min viable product

--- a/src/screens/HomeScreen.css
+++ b/src/screens/HomeScreen.css
@@ -9,6 +9,10 @@
     overflow: hidden;
 }
 
+.Welcome {
+    font-size: 5em;
+}
+
 .PlayButton {
     border-radius: 50px;
     border: 5px solid transparent;
