--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,20 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Sour Gummy", sans-serif;
+  font-weight: 900;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Sour Gummy", sans-serif;
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Sour Gummy", sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 900;
 
   color-scheme: light dark; /*later update to light and dark mode*/
   color: rgba(255, 255, 255, 0.87);
