--- a/src/screens/LoseScreen.css
+++ b/src/screens/LoseScreen.css
@@ -11,7 +11,7 @@
 }
 
 .Score {
-  font-size: 2em;
+  font-size: 3em;
   color: white;
   margin-bottom: 20px;
 }
@@ -79,4 +79,5 @@
     object-fit: contain;
     z-index: 1000;
     color: white;
+    filter: drop-shadow(0 0 5em red);
 }
