--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -6,3 +6,13 @@
     color: white;
   }
   
+  .groundFlat {
+    position: fixed; /* Change to fixed to keep it in place */
+    bottom: 0;
+    left: 0; /* Ensure it's aligned to the left side */
+    width: 100vw;
+    height: auto; /* Adjust as needed */
+    margin: 0; /* Make sure there's no margin */
+    padding: 0; /* Ensure no padding is added */
+  }
+  
